2241. Design an ATM Machine